# Causal-Target-Prioritization

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/src/ctpc/: __init__.py  config.py  db.py  main.py  schemas.py
backend/src/ctpc/api/: app.py  schema.py
backend/src/ctpc/core/: settings.py  types.py
backend/src/ctpc/data/: fixtures.py
backend/src/ctpc/db/: models.py  session.py
backend/src/ctpc/ingest/: __init__.py  chembl.py  clinicaltrials.py  disease_map.py  http.py  ids.py  opentargets.py  pipeline.py
backend/src/ctpc/models/: __init__.py  disease.py  ingest.py  target.py
backend/src/ctpc/routers/: api_v1.py  internal.py
backend/src/ctpc/services/: query.py  ranking.py  scorecard.py
backend/tests/: conftest.py  test_health.py  test_ranking.py
backend/tests/api/: test_graphql_api.py  test_rest_api.py
backend/tests/ingest/: test_fixture_ingest.py
backend/tests/services/: test_ranking_service.py
frontend/: package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: breadcrumbs.tsx  copy-button.test.tsx  copy-button.tsx  disease-search.tsx  how-ranking-works.tsx  keyboard-shortcuts-dialog.tsx  metric-strip.tsx  page-shell.tsx  score-breakdown.tsx  section.tsx  site-footer.tsx  source-status-panel.test.tsx  source-status-panel.tsx  (+6 more)
infra/: .env.example  docker-compose.yml
scripts/: bootstrap-node.sh
(+12 files in other folders)
